--- a/views/login.pug
+++ b/views/login.pug
@@ -1,13 +1,15 @@
 extends layout
 
 block content
-  h1(class='section-title') Login
-
-  form(class='login__form')
-    input(class='login__input' type="email" name="email" id="loginEmail" placeholder="Email" autocorrect="off" autocapitalize="off" autofocus)
-    input(class='login__input' type="password" name="password" id="loginPassword" placeholder="Password" autocorrect="off" autocapitalize="off")
-    p
-      a(href="") Forgot your password?
-    p
-      input(type="submit" class="btn" value="Sign In")
-      
+  div(class='container-xl')
+    div(class='row')
+      div(class='col')
+        h1(class='section-title') Login
+        form(class='login__form')
+          input(class='login__input' type="email" name="email" id="loginEmail" placeholder="Email" autocorrect="off" autocapitalize="off" autofocus)
+          input(class='login__input' type="password" name="password" id="loginPassword" placeholder="Password" autocorrect="off" autocapitalize="off")
+          p
+            a(href="") Forgot your password?
+          p
+            input(type="submit" class="btn" value="Sign In")
+      div(class='col') 
