--- a/views/layout.pug
+++ b/views/layout.pug
@@ -28,7 +28,7 @@ html(lang='en')
             ul(class='navbar__dropdown')
               a(href='/catalog/items' class='navbar__dropbtn') Music
               li(class='navbar__dropdown-content')
-                a(href='#') Pre Orders
+                a(href='/catalog/pre-orders') Pre Orders
                 a(href='#') New Releases
                 a(href='/catalog/sub-pop-releases') Sub Pop
                 a(href='/catalog/hardly-art') Hardly Art
