Create /account/login route and view.

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -14,14 +14,14 @@ html(lang='en')
     div(class='header-bar')
       ul(class='header-bar__module')
         li 
-          a(href='/login') Log in
+          a(href='/account/login') Log in
         li 
           a or 
         li 
           a(href='/create-account') Create account
     div(class='header')
       div(class='header-logo')
-        a(href="/catalog")
+        a(href="/")
           img(src="http://localhost:3000/images/MegaMartHeader_2020_540x.webp", alt="Sub Pop MegaMart Logo", id="logo")
       div(class='header-nav')
         ul(class='navbar')
