--- a/views/login.pug
+++ b/views/login.pug
@@ -4,7 +4,7 @@ block content
   div(class='container-xl')
     div(class='row')
       div(class='col')
-        h1(class='section-title') Login
+        h1(class='section-title') #{title}
         form(class='login__form')
           input(class='login__input' type="email" name="email" id="loginEmail" placeholder="Email" autocorrect="off" autocapitalize="off" autofocus)
           input(class='login__input' type="password" name="password" id="loginPassword" placeholder="Password" autocorrect="off" autocapitalize="off")
