Create /account/info page.

--- a/views/login.pug
+++ b/views/login.pug
@@ -9,7 +9,8 @@ block content
           input(class='login__input' type="email" name="email" id="loginEmail" placeholder="Email" autocorrect="off" autocapitalize="off" autofocus)
           input(class='login__input' type="password" name="password" id="loginPassword" placeholder="Password" autocorrect="off" autocapitalize="off")
           p
-            a(href="") Forgot your password?
+            a(href="/account/info") Forgot your password?
           p
             input(type="submit" class="btn" value="Sign In")
       div(class='col') 
+
