Fix all links. (No 404 errors).

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -18,7 +18,7 @@ html(lang='en')
         li 
           a or 
         li 
-          a(href='/create-account') Create account
+          a(href='/account/create-account') Create account
     div(class='header')
       div(class='header-logo')
         a(href="/")
@@ -31,7 +31,7 @@ html(lang='en')
                 a(href='/catalog/items' class='navbar__dropbtn') Music
                 li(class='navbar__dropdown-content')
                   a(href='/catalog/pre-orders') Pre Orders
-                  a(href='#') New Releases
+                  a(href='/catalog/new-releases') New Releases
                   a(href='/catalog/sub-pop-releases') Sub Pop
                   a(href='/catalog/hardly-art') Hardly Art
                   a(href='/catalog/other-labels') Other Labels
