--- a/views/login.pug
+++ b/views/login.pug
@@ -5,7 +5,7 @@ block content
     div(class='row')
       div(class='col')
         h1(class='section-title') Login
-        form(class='login__form' action='login' method="post")
+        form(class='login__form' action='' method="get")
           input(class='login__input' type="email" name="email" id="loginEmail" placeholder="Email" autocorrect="off" autocapitalize="off" autofocus)
           input(class='login__input' type="password" name="password" id="loginPassword" placeholder="Password" autocorrect="off" autocapitalize="off")
           p
