Fix header image.

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -22,7 +22,7 @@ html(lang='en')
     div(class='header')
       div(class='header-logo')
         a(href="/")
-          img(src="http://localhost:3000/images/MegaMartHeader_2020_540x.webp", alt="Sub Pop MegaMart Logo", id="logo")
+          img(src="/images/MegaMartHeader_2020_540x.webp", alt="Sub Pop MegaMart Logo", id="logo")
       div(class='header-nav')
         ul(class='navbar')
           li
