More CSS tweaks.

--- a/views/index.pug
+++ b/views/index.pug
@@ -3,3 +3,17 @@ extends layout
 block content
   div(class="hero")
     img(src="https://cdn.shopify.com/s/files/1/0110/1882/9920/files/Stella_UpAndAway_MegaMart_1280x460_5349cf4f-0616-4f26-a454-c9f3fe854559_1280x.jpg?", alt="Hero image")
+  //- h1(class='section-title') Pre Order
+  h1(class='section-title') Please view on desktop
+  //- div(class='product-grid')
+  //-   each item in item_list
+  //-     div(class='product')
+  //-       a(href=item.url) 
+  //-         p(id=item.format)
+  //-         img(class='product-image' src=item.image)
+    //-       p(class='product-title') #{item.title}
+    //-       p(class='product-artist') #{item.artist.name}
+    //-       p(class='product-price') #{item.priceFormatted}
+    //- else
+    //-   div
+    //-     p No items found!
